# lidar_sf30c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: main.c
bsp/: bsp.c  bsp.h  bsp_config.h  bsp_pinmap.h
cmake/: stm32f1.cmake
drivers/devices/: README.md  lidar.c  lidar.h
drivers/mcu/: usart.c  usart.h
sys/: interrupts.c  syscall.c
